# socketcan_bridge

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SCOPE.md  UDP_README.md
bridge/: main.c  server.c
docs/: CONCEPT.md  SPEC.md
examples/: basic_client.c  drive_sequence.c  drive_sequence.py  signal_monitor.c  signal_monitor.py  vcan_loopback.c  vcan_loopback.py
include/ash/: ash.h  proto.h
lib/: ash.c  ash.py
lib/DoIP/: client.c  doip.h  server.c
lib/client/: client.c
server/: app.c  app.h  cfg.c  cfg.h  def.c  def.h  iface.c  iface.h  main.c  own.c  own.h  proto.c  proto.h  server.c  server.h  session.c  session.h
tools/: test_client.py
